# gafour

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  key.json  pyproject.toml  report.csv
.claude/agents/: google-analyst.md
.claude/docs/: ADDITIONAL_RESEARCH.md  COMMAND_REFERENCE.md  FEATURE_COMPARISON.md  GA4_CLI_RESEARCH.md  IMPLEMENTATION_ROADMAP.md  INDEX.md  PRD.md  README_RESEARCH.md  RESEARCH_SUMMARY.txt
docs/: skills.md
skills/ga4-accounts/: SKILL.md
skills/ga4-audiences/: SKILL.md
skills/ga4-custom-dimensions/: SKILL.md
skills/ga4-custom-metrics/: SKILL.md
skills/ga4-datastreams/: SKILL.md
skills/ga4-events/: SKILL.md
skills/ga4-key-events/: SKILL.md
skills/ga4-metadata/: SKILL.md
skills/ga4-properties/: SKILL.md
skills/ga4-realtime/: SKILL.md
skills/ga4-reports/: SKILL.md
skills/gafour-cli/: SKILL.md
skills/gafour-cli/references/: metadata.md  reports.md
src/ga4/: auth.py  cli.py  config.py  filters.py  output.py
src/ga4/commands/: accounts.py  audiences.py  auth.py  config.py  custom_dimensions.py  custom_metrics.py  datastreams.py  events.py  key_events.py  metadata.py  properties.py  realtime.py  reports.py
src/ga4/models/: custom_dimension.py  custom_metric.py  event.py  metadata.py  report.py
src/ga4x/: auth.py  cli.py  config.py  filters.py  output.py
src/ga4x/commands/: accounts.py  audiences.py  auth.py  config.py  custom_dimensions.py  custom_metrics.py  datastreams.py  events.py  key_events.py  metadata.py  properties.py  realtime.py  reports.py
src/ga4x/models/: datastream.py  property.py
src/gafour/: auth.py  cli.py  config.py  errors.py  filters.py  output.py
src/gafour/commands/: accounts.py  audiences.py  auth.py  config.py  custom_dimensions.py  custom_metrics.py  datastreams.py  events.py  key_events.py  metadata.py  properties.py  realtime.py  reports.py
src/gafour/models/: account.py  audience.py  key_event.py  report.py
tests/: conftest.py  test_accounts.py  test_auth.py  test_config.py  test_custom_dimensions.py  test_custom_metrics.py  test_errors.py  test_filters.py  test_key_events.py  test_metadata.py  test_output.py  test_properties.py  test_reports_batch.py
