[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ga4-cli"
version = "0.1.0"
description = "A comprehensive Google Analytics 4 CLI"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"

[project.urls]
Homepage = "https://github.com/damupi/ga4-cli"
Repository = "https://github.com/damupi/ga4-cli"
"Inspired by" = "https://github.com/FunnelEnvy/ga4-cli"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "google-analytics-data>=0.18.0",
    "google-analytics-admin>=0.22.0",
    "google-auth>=2.0.0",
    "google-auth-oauthlib>=1.0.0",
]

[project.scripts]
ga4 = "ga4.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ga4"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=ga4 --cov-report=term-missing"
